# llm-code-indexer-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
