[package]
name = "adi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "adi"
path = "src/main.rs"

[dependencies]
adi-core.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
